# bearings

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bearings/: Cargo.toml
bearings-proc/: Cargo.toml
bearings-proc/src/: lib.rs
bearings/examples/: simple.rs
bearings/src/: error.rs  lib.rs
bearings/tests/: basic.rs
