[package]
name = "bearings"
version = "0.0.0"
authors = ["Michał 'Griwes' Dominiak <griwes@griwes.info>"]
edition = "2018"
license = "Apache-2.0"
description = "An asynchronous, transport-agnostic RPC library for two-way persistent connections."
repository = "https://github.com/griwes/bearings"

[dependencies]
