[package]
name = "bearings"
version = "0.0.0"
authors = ["Michał 'Griwes' Dominiak <griwes@griwes.info>"]
edition = "2018"
license = "Apache-2.0"
description = "An asynchronous, transport-agnostic RPC library for two-way persistent connections."
repository = "https://github.com/griwes/bearings"

[dependencies]
bearings-proc = { path = "../bearings-proc" }

async-trait = "0.1"
tokio = { git = "https://github.com/tokio-rs/tokio", features = ["full"] }
uuid = { version = "0.8", features = ["v5", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.4"

[dev-dependencies]

